--- a/articles/firewall-manager/index.yml
+++ b/articles/firewall-manager/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: vhorne
   ms.author: victorh
   ms.date: 10/10/2019
-  ms.openlocfilehash: e3b98f3954ee70b5e002bb844147d4d51b1f6d9d
-  ms.sourcegitcommit: 253d4c7ab41e4eb11cd9995190cd5536fcec5a3c
+  ms.openlocfilehash: bf7474f1519fbd94be3de8daa15a43775a6a6a0a
+  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/25/2020
-  ms.locfileid: "73508663"
+  ms.lasthandoff: 06/30/2020
+  ms.locfileid: "85561429"
 landingContent:
 - title: 了解 Azure 防火墙管理器
   linkLists:
@@ -31,15 +31,15 @@ landingContent:
     links:
     - text: 什么是安全虚拟中心？
       url: secured-virtual-hub.md
-- title: 信任的安全合作伙伴
+- title: 安全合作伙伴提供程序
   linkLists:
   - linkListType: concept
     links:
-    - text: 什么是信任的安全合作伙伴（预览版）？
+    - text: 什么是安全合作伙伴提供程序？
       url: trusted-security-partners.md
   - linkListType: how-to-guide
     links:
-    - text: 部署信任的安全合作伙伴（预览版）
+    - text: 部署安全合作伙伴提供程序
       url: deploy-trusted-security-partner.md
 - title: 保护 Azure 云网络
   linkLists:
