--- a/articles/governance/blueprints/index.yml
+++ b/articles/governance/blueprints/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 09/01/2019
-  ms.openlocfilehash: 525d09dcd12c19ded3e13b38a56290f7816a26a7
-  ms.sourcegitcommit: 1de57529ab349341447d77a0717f6ced5335074e
+  ms.date: 06/29/2020
+  ms.openlocfilehash: 77959798ea5ab2369402f7e0a1ac8e7b530adc27
+  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/09/2020
-  ms.locfileid: "84609057"
+  ms.lasthandoff: 06/30/2020
+  ms.locfileid: "85550216"
 landingContent:
 - title: 关于 Azure 蓝图
   linkLists:
@@ -37,11 +37,11 @@ landingContent:
     links:
     - text: 创建新蓝图（门户）
       url: ./create-blueprint-portal.md
-    - text: 创建新蓝图 (PowerShell)
-      url: ./create-blueprint-powershell.md
     - text: 创建新蓝图 (Azure CLI)
       url: ./create-blueprint-azurecli.md
-    - text: 创建新蓝图 (REST API)
+    - text: 创建新蓝图 (Azure PowerShell)
+      url: ./create-blueprint-powershell.md
+    - text: 创建新蓝图 (REST)
       url: ./create-blueprint-rest-api.md
   - linkListType: tutorial
     links:
@@ -99,9 +99,11 @@ landingContent:
       url: ./reference/blueprint-functions.md
     - text: PowerShell 模块 (PSGallery)
       url: https://www.powershellgallery.com/packages/Az.Blueprint
+    - text: Azure CLI
+      url: /cli/azure/ext/blueprint/blueprint
     - text: Azure PowerShell
       url: /powershell/module/az.blueprint/#blueprint
-    - text: REST API
-      url: /rest/api/blueprints/
-    - text: .NET
+    - text: 用于 .NET 的 Azure SDK
       url: /dotnet/api/overview/azure/blueprints/management
+    - text: REST
+      url: /rest/api/blueprints/
