--- a/articles/marketplace/TOC.yml
+++ b/articles/marketplace/TOC.yml
@@ -73,193 +73,6 @@
               href: ./marketplace-faq-publisher-guide.md
             - name: 上市地区和货币
               href: ./marketplace-geo-availability-currencies.md
-- name: 云合作伙伴门户
-  href: ./cloud-partner-portal-orig/cloud-partner-portal-getting-started-with-the-cloud-partner-portal.md
-  items:
-    - name: 门户教程
-      href: ./cloud-partner-portal/portal-tour/cpp-portal-tour.md
-      items:
-        - name: 门户导航
-          href: ./cloud-partner-portal/portal-tour/cpp-portal-navigation.md
-        - name: “新产品/服务”菜单
-          href: ./cloud-partner-portal/portal-tour/cpp-new-offer-menu.md
-        - name: 全部产品/服务页
-          href: ./cloud-partner-portal/portal-tour/cpp-all-offers-page.md
-        - name: 审核页面
-          href: ./cloud-partner-portal/portal-tour/cpp-approvals-page.md
-        - name: 所有发布者页面
-          href: ./cloud-partner-portal/portal-tour/cpp-all-publishers-page.md
-        - name: “用户”页
-          href: ./cloud-partner-portal/portal-tour/cpp-users-page.md
-        - name: 审核历史记录页面
-          href: ./cloud-partner-portal/portal-tour/cpp-history-page.md
-        - name: “见解”页
-          href: ./cloud-partner-portal/portal-tour/cpp-insights-page.md
-    - name: 门户管理
-      href: ./cloud-partner-portal/portal-manage/cpp-portal-management.md
-      items:
-        - name: 帐户管理先决条件
-          href: ./cloud-partner-portal/portal-manage/cpp-manage-prerequisites.md
-        - name: 管理发布者配置文件
-          href: ./cloud-partner-portal/portal-manage/cpp-manage-publisher-profile.md
-        - name: 管理用户
-          href: ./cloud-partner-portal/portal-manage/cpp-manage-users.md
-    - name: 业务管理
-      items:
-        - name: SEO 指南
-          href: ./cloud-partner-portal-orig/cloud-partner-portal-seo-guidance.md
-        - name: GDPR 符合性
-          href: ./cloud-partner-portal-orig/cloud-partner-portal-gdpr.md
-        - name: 专用 SKU
-          href: ./cloud-partner-portal-orig/cloud-partner-portal-azure-private-skus.md
-        - name: 管理潜在客户
-          items:
-            - name: 配置潜在顾客
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-get-customer-leads.md
-            - name: Azure 表
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-azure-table.md
-            - name: Dynamics
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-dynamics.md
-            - name: HTTPS 终结点
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-https.md
-            - name: Marketo
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-marketo.md
-            - name: Salesforce
-              href: ./cloud-partner-portal-orig/cloud-partner-portal-lead-management-instructions-salesforce.md
-        - name: Seller Insights
-          items:
-            - name: 入门
-              href: ./cloud-partner-portal-orig/si-getting-started.md
-            - name: Web analytics
-              href: ./cloud-partner-portal-orig/web-analytics.md
-            - name: 定义
-              href: ./cloud-partner-portal-orig/si-insights-definitions-v4.md
-            - name: 见解常见问题解答
-              href: ./cloud-partner-portal-orig/si-faqs.md
-    - name: 市场套餐
-      href: ./cloud-partner-portal/cpp-marketplace-offers.md
-      items:
-        - name: 管理套餐
-          href: ./cloud-partner-portal/manage-offers/cpp-manage-offers.md
-          items:
-            - name: 创建套餐
-              href: ./cloud-partner-portal/manage-offers/cpp-create-offer.md
-            - name: 发布套餐
-              href: ./cloud-partner-portal/manage-offers/cpp-publish-offer.md
-            - name: 查看套餐状态
-              href: ./cloud-partner-portal/manage-offers/cpp-view-status-offer.md
-            - name: 更新套餐
-              href: ./cloud-partner-portal/manage-offers/cpp-update-offer.md
-            - name: 删除套餐
-              href: ./cloud-partner-portal/manage-offers/cpp-delete-offer.md
-        - name: 体验版
-          items:
-            - name: 什么是体验版？
-              href: ./cloud-partner-portal/test-drive/what-is-test-drive.md
-            - name: Azure 资源管理器体验版
-              href: ./cloud-partner-portal/test-drive/azure-resource-manager-test-drive.md
-            - name: 托管体验版
-              href: ./cloud-partner-portal/test-drive/hosted-test-drive.md
-            - name: 逻辑应用体验版
-              href: ./cloud-partner-portal/test-drive/logic-app-test-drive.md
-            - name: 体验版转换示例
-              href: ./cloud-partner-portal/test-drive/transforming-examples-for-test-drive.md
-            - name: 市场营销和最佳做法
-              href: ./cloud-partner-portal/test-drive/marketing-and-best-practices.md
-        - name: Azure 应用程序产品/服务
-          href: ./cloud-partner-portal/azure-applications/cpp-azure-app-offer.md
-          items:
-            - name: 先决条件
-              href: ./cloud-partner-portal/azure-applications/cpp-prerequisites.md
-            - name: 创建 Azure 应用程序套餐
-              href: ./cloud-partner-portal/azure-applications/cpp-create-offer.md
-              items:
-                - name: “产品/服务设置”选项卡
-                  href: ./cloud-partner-portal/azure-applications/cpp-offer-settings-tab.md
-                - name: “SKU”选项卡
-                  href: ./cloud-partner-portal/azure-applications/cpp-skus-tab.md
-                - name: “体验版”选项卡
-                  href: ./cloud-partner-portal/azure-applications/cpp-testdrive-tab.md
-                - name: “市场”选项卡
-                  href: ./cloud-partner-portal/azure-applications/cpp-marketplace-tab.md
-                - name: “支持”选项卡
-                  href: ./cloud-partner-portal/azure-applications/cpp-support-tab.md
-            - name: 创建技术资产
-              href: ./cloud-partner-portal/azure-applications/cpp-create-technical-assets.md
-            - name: 发布 Azure 应用程序产品/服务
-              href: ./cloud-partner-portal/azure-applications/cpp-publish-offer.md
-            - name: 处理评审反馈
-              href: ./cloud-partner-portal/azure-applications/cpp-handling-review-feedback.md
-            - name: 更新现有套餐
-              href: ./cloud-partner-portal/azure-applications/cpp-update-existing-offer.md
-        - name: 咨询服务
-          href: ./cloud-partner-portal/consulting-services/consulting-services-offer.md
-        - name: 容器套餐
-          href: ./cloud-partner-portal/containers/cpp-containers-offer.md
-        - name: Dynamics 365 for Business Central 套餐
-          href: ./cloud-partner-portal-orig/cpp-business-central-offer.md
-          items:
-            - name: 发布概述
-              href: ./cloud-partner-portal-orig/d365-finance-overview-publish-your-app.md
-            - name: 新建产品/服务
-              href: ./cloud-partner-portal-orig/d365-finance-create-new-offer.md
-            - name: 产品/服务设置
-              href: ./cloud-partner-portal-orig/d365-finance-create-offer-settings.md
-            - name: 技术详细信息
-              href: ./cloud-partner-portal-orig/d365-finance-create-offer-technical-details.md
-            - name: 店面详细信息
-              href: ./cloud-partner-portal-orig/d365-finance-create-storefront-details.md
-            - name: 发布过程
-              href: ./cloud-partner-portal-orig/d365-finance-app-publishing-process.md
-        - name: Dynamics 365 for Customer Engagement 产品/服务
-          href: ./cloud-partner-portal/dyn365ce/cpp-customer-engagement-offer.md
-          items:
-            - name: 先决条件
-              href: ./cloud-partner-portal/dyn365ce/cpp-prerequisites.md
-            - name: 创建客户参与套餐
-              href: ./cloud-partner-portal/dyn365ce/cpp-create-offer.md
-              items:
-                - name: “产品/服务设置”选项卡
-                  href: ./cloud-partner-portal/dyn365ce/cpp-offer-settings-tab.md
-                - name: “技术信息”选项卡
-                  href: ./cloud-partner-portal/dyn365ce/cpp-technical-info-tab.md
-                - name: “体验版”选项卡
-                  href: ./cloud-partner-portal/dyn365ce/cpp-testdrive-tab.md
-                - name: “店面详细信息”选项卡
-                  href: ./cloud-partner-portal/dyn365ce/cpp-storefront-details-tab.md
-                - name: “联系人”选项卡
-                  href: ./cloud-partner-portal/dyn365ce/cpp-contacts-tab.md
-            - name: 创建客户参与技术资产
-              href: ./cloud-partner-portal/dyn365ce/cpp-create-technical-assets.md
-            - name: 发布客户参与套餐
-              href: ./cloud-partner-portal/dyn365ce/cpp-publish-offer.md
-        - name: Dynamics 365 for Operations 套餐
-          href: ./cloud-partner-portal-orig/cpp-dynamics-365-operations-offer.md
-          items:
-            - name: 先决条件
-              href: ./cloud-partner-portal-orig/pre-requisites.md
-            - name: 如何发布
-              href: ./cloud-partner-portal-orig/manage-dynamics-365-for-operations.md
-            - name: LCS 订阅
-              href: ./cloud-partner-portal-orig/lcs-subscription.md
-            - name: 代码升级
-              href: ./cloud-partner-portal-orig/code-upgrade.md
-            - name: 数据实体
-              href: ./cloud-partner-portal-orig/data-entities.md
-            - name: BPM 和方法
-              href: ./cloud-partner-portal-orig/bpm-and-methodologies.md
-            - name: 帮助 Wiki
-              href: ./cloud-partner-portal-orig/help-wiki.md
-        - name: IoT Edge 模块套餐
-          href: ./cloud-partner-portal/iot-edge-module/iot-edge-module-offer.md
-        - name: Power BI 应用套餐
-          href: ./cloud-partner-portal/power-bi/cpp-power-bi-offer.md
-        - name: SaaS 应用程序套餐
-          href: ./cloud-partner-portal/saas-app/cpp-saas-offer.md
-        - name: 虚拟机套餐
-          href: ./cloud-partner-portal/virtual-machine/cpp-virtual-machine-offer.md
-    - name: 获取支持
-      href: ./cloud-partner-portal-orig/cloud-partner-portal-support-for-cloud-partner-portal.md
 - name: 合作伙伴中心内的商业市场
   items:
     - name: 商业市场概述
@@ -388,8 +201,14 @@
               href: ./partner-center-portal/marketplace-metering-service-apis.md
             - name: Azure 市场计量服务 API - 常见问题解答
               href: ./partner-center-portal/marketplace-metering-service-apis-faq.md
-        - name: 试用产品/服务
-          href: ./partner-center-portal/test-drive.md
+        - name: 体验版
+          items:
+            - name: 什么是体验版？
+              href: ./what-is-test-drive.md
+            - name: 体验版技术配置
+              href: ./test-drive-technical-configuration.md
+            - name: Azure 资源管理器体验版
+              href: ./azure-resource-manager-test-drive.md
         - name: 联合销售选项
           href: ./partner-center-portal/commercial-marketplace-co-sell.md
           items:
