--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -27,6 +27,8 @@
       href: tutorial-net-create-vault-azure-web-app.md
 - name: 示例
   items:
+    - name: Key Vault 代码示例
+      href: 'https://docs.microsoft.com/samples/browse/?expanded=azure&products=azure-key-vault'
     - name: Azure Policy 内置策略定义
       displayName: 'samples, policies, definitions'
       href: ../policy-samples.md?toc=/azure/key-vault/general/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
