--- a/articles/key-vault/secrets/toc.yml
+++ b/articles/key-vault/secrets/toc.yml
@@ -50,6 +50,8 @@
           href: storage-keys-sas-tokens-code.md
 - name: 示例
   items:
+    - name: Key Vault 代码示例
+      href: 'https://docs.microsoft.com/samples/browse/?expanded=azure&products=azure-key-vault'
     - name: Azure Policy 内置策略定义
       displayName: 'samples, policies, definitions'
       href: ../policy-samples.md?toc=/azure/key-vault/secrets/toc.json&bc=/azure/key-vault/breadcrumb/toc.json
