--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -7,12 +7,15 @@
 - name: 快速入门
   expanded: true
   items:
-    - name: 创建逻辑应用 - Azure 门户
+    - name: 创建逻辑应用 - 门户
       href: quickstart-create-first-logic-app-workflow.md
     - name: 创建逻辑应用 - Visual Studio
       href: quickstart-create-logic-apps-with-visual-studio.md
     - name: 创建逻辑应用 - Visual Studio Code
       href: quickstart-create-logic-apps-visual-studio-code.md
+    - name: 创建逻辑应用 - ARM 模板
+      displayName: Resource Manager
+      href: quickstart-create-deploy-azure-resource-manager-template.md
 - name: 教程
   items:
     - name: 创建基于计划的工作流
