--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -172,6 +172,9 @@
               href: how-to-change-storage-access-key.md
             - name: 使用 Azure 防火墙
               href: how-to-access-azureml-behind-firewall.md
+            - name: 安全编码
+              href: concept-secure-code-best-practice.md
+              displayName: security threat
         - name: 设置身份验证
           displayName: 'authentication, auth, oauth'
           href: how-to-setup-authentication.md
@@ -314,6 +317,8 @@
             - name: 解释自动化 ML 模型
               displayName: 'SDK, interpret, interpret, explain, explanability, interpretability, automated ML, automl, auto ml'
               href: how-to-machine-learning-interpretability-automl.md
+        - name: 评估和缓解模型公平性
+          href: how-to-machine-learning-fairness-aml.md
         - name: 训练时使用 Key Vault
           displayName: secrets keyvault
           href: how-to-use-secrets-in-runs.md
