--- a/articles/virtual-machines/troubleshooting/toc.yml
+++ b/articles/virtual-machines/troubleshooting/toc.yml
@@ -103,6 +103,8 @@
           href: unresponsive-vm-apply-group-policy.md
         - name: 应用安全策略时，VM 无响应
           href: unresponsive-vm-apply-security-policy.md
+        - name: Windows 停止错误 - 状态无内存
+          href: troubleshoot-windows-stop-error.md
 - name: 无法连接到 VM
   items:
     - name: RDP
