commit translated contents

--- a/articles/lighthouse/index.yml
+++ b/articles/lighthouse/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: JnHs
   ms.author: jenhayes
   ms.date: 04/14/2020
-  ms.openlocfilehash: 3d06144a9b0a39e7fe0dfbaf7fbdd789ef439336
-  ms.sourcegitcommit: 4042aa8c67afd72823fc412f19c356f2ba0ab554
+  ms.openlocfilehash: 4875c37a73626e726416aedc6b5d43cf1db10dc1
+  ms.sourcegitcommit: 845a55e6c391c79d2c1585ac1625ea7dc953ea89
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/24/2020
-  ms.locfileid: "85297828"
+  ms.lasthandoff: 07/05/2020
+  ms.locfileid: "85963608"
 landingContent:
 - title: 关于 Azure Lighthouse
   linkLists:
@@ -114,6 +114,6 @@ landingContent:
   - linkListType: get-started
     links:
     - text: 有关 Azure Lighthouse 的 Microsoft Q&A
-      url: https://docs.microsoft.com/answers/topics/azure-lighthouse.html
+      url: /answers/topics/azure-lighthouse.html
     - text: 请求产品功能
       url: https://feedback.azure.com/forums/922753
