--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -47,10 +47,8 @@
       href: connect-virtual-network-vnet-isolated-environment-overview.md
     - name: 业务连续性和灾难恢复
       href: business-continuity-disaster-recovery-guidance.md
-    - name: 安全性
-      items:
-        - name: 安全基线
-          href: security-baseline.md
+    - name: 安全基线
+      href: security-baseline.md
 - name: 操作指南
   items:
     - name: 开发
@@ -319,7 +317,7 @@
           href: ../connectors/connectors-create-api-yammer.md
     - name: 安全
       items:
-        - name: 增强逻辑应用的安全性
+        - name: 保护逻辑应用
           href: logic-apps-securing-a-logic-app.md
         - name: 使用托管标识进行身份验证
           href: create-managed-service-identity.md
